Updat No longer display the room name, hide top invite btn on mobile

--- a/web/less/landing.less
+++ b/web/less/landing.less
@@ -445,7 +445,10 @@ a {
 
   #righthand-container {
     height: 100%;
-    margin-top: 0;
+    margin-top: 102px;
+    @media @smartphonesPortrait {
+      margin-top: 35px;
+    }
   }
 
   @media @smartphonesPortrait {
