--- a/web/less/room.less
+++ b/web/less/room.less
@@ -152,9 +152,7 @@ body {
     font-size: 16px;
     cursor: pointer;
     @media @smartphonesPortrait {
-      margin-right: 8px;
-      padding: 0 8px;
-      width: 24px;
+      display: none;
     }
     i {
       margin-right: 10px;
